--- a/week1/link.html
+++ b/week1/link.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>My test page</title>
-  </head>
-  <body>
-    <img src="images/firefox-icon.png" alt="My test image">
-  </body>
-</html> 
+<head>
+<style>
+body {
+  background-color: lightblue;
+}
+</style>
+</head>
+<body>
+
+<h1>第一版網頁設計</h1>
+
+<p><a href="https://www.youtube.com/">Visit youtube</a></p>
+
+</body>
+</html>
