--- a/web2/aass.html
+++ b/web2/aass.html
@@ -169,6 +169,7 @@
                 }
             }
         }
+        //參考網址:https://www.itread01.com/content/1546544908.html
     </script>
 
     <style type="text/css">
@@ -178,6 +179,6 @@
     </style>
 </head>
 <body>
-	
 </body>
+
 </html>
